--- a/dsi-16_project-1/code/Alexis Lim_DSI-16_Project 1_Submission.ipynb
+++ b/dsi-16_project-1/code/Alexis Lim_DSI-16_Project 1_Submission.ipynb
@@ -35,10 +35,10 @@
     "If you want to, it's great to use relative links to direct your audience to various sections of a notebook. **HERE'S A DEMONSTRATION WITH THE CURRENT SECTION HEADERS**:\n",
     "\n",
     "### Contents:\n",
-    "- [2017 Data Import & Cleaning](#Data-Import-and-Cleaning)\n",
+    "- [2017 Data Import and Cleaning](#Data-Import-and-Cleaning)\n",
     "- [2018 Data Import and Cleaning](#2018-Data-Import-and-Cleaning)\n",
     "- [Exploratory Data Analysis](#Exploratory-Data-Analysis)\n",
-    "- [Data Visualization](#Visualize-the-data)\n",
+    "- [Data Visualization](#Data-Visualization)\n",
     "- [Descriptive and Inferential Statistics](#Descriptive-and-Inferential-Statistics)\n",
     "- [Outside Research](#Outside-Research)\n",
     "- [Conclusions and Recommendations](#Conclusions-and-Recommendations)\n",
@@ -7631,7 +7631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize the data\n",
+    "## Data Visualization\n",
     "\n",
     "There's not a magic bullet recommendation for the right number of plots to understand a given dataset, but visualizing your data is *always* a good idea. Not only does it allow you to quickly convey your findings (even if you have a non-technical audience), it will often reveal trends in your data that escaped you when you were looking only at numbers.\n",
     "\n",
