--- a/dsi-16_project-1/code/Alexis Lim_DSI-16_Project 1_Submission.ipynb
+++ b/dsi-16_project-1/code/Alexis Lim_DSI-16_Project 1_Submission.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "Define the problem you are finding answers for from the data given.\n",
     "\n",
-    "Given the trends in state average participation rates and subject/total scores for the SAT and ACT from 2017 to 2018, how can we work to increase the participation rates and what are the criteria for the states we should focus on?"
+    "What relationships can we identify in state average participation rates and average subject/total scores for the SAT and ACT in 2018? How can we work to increase participation rates in selected states and what are the criteria for the states we should focus on?"
    ]
   },
   {
@@ -39,6 +39,7 @@
     "- [2018 Data Import and Cleaning](#2018-Data-Import-and-Cleaning)\n",
     "- [Exploratory Data Analysis](#Exploratory-Data-Analysis)\n",
     "- [Data Visualization](#Data-Visualization)\n",
+    "- [Data Dictionary](#Updated-Data-Dictionary)\n",
     "- [Descriptive and Inferential Statistics](#Descriptive-and-Inferential-Statistics)\n",
     "- [Outside Research](#Outside-Research)\n",
     "- [Conclusions and Recommendations](#Conclusions-and-Recommendations)\n",
@@ -1990,6 +1991,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Data Dictionary\n",
+    "\n",
     "|Feature|Type|Dataset|Description|\n",
     "|---|---|---|---|\n",
     "|state|object|ACT & SAT|The U.S. state for which the data applies.|\n",
@@ -2002,23 +2005,7 @@
     "|act17_math|float|ACT 2017|The state's mean score for the Math component of the 2017 ACT.|\n",
     "|act17_reading|float|ACT 2017|The state's mean score for the Reading component of the 2017 ACT.|\n",
     "|act17_science|float|ACT 2017|The state's mean score for the Science component of the 2017 ACT.|\n",
-    "|act17_composite|float|ACT 2017|The state's mean composite score for the 2017 ACT.|\n",
-    "|sat18_participation|float|SAT 2018|The state's participation rate for the 2018 SAT.|\n",
-    "|sat18_readingwriting|int|SAT 2018|The state's mean score for the Evidence-Based Reading & Writing component of the 2018 SAT.|\n",
-    "|sat18_math|int|SAT 2018|The state's mean score for the Math component of the 2018 SAT.|\n",
-    "|sat18_total|int|SAT 2018|The state's mean total score for the 2018 SAT.|\n",
-    "|act18_participation|float|ACT 2018|The state's participation rate for the 2018 ACT.|\n",
-    "|act18_english|float|ACT 2018|The state's mean score for the English component of the 2018 ACT.|\n",
-    "|act18_math|float|ACT 2018|The state's mean score for the Math component of the 2018 ACT.|\n",
-    "|act18_reading|float|ACT 2018|The state's mean score for the Reading component of the 2018 ACT.|\n",
-    "|act18_science|float|ACT 2018|The state's mean score for the Science component of the 2018 ACT.|\n",
-    "|act18_composite|float|ACT 2018|The state's mean composite score for the 2018 ACT.|\n",
-    "|sat_part_difference|float|Final Dataset|The state's SAT participation rate change from 2017 to 2018.|\n",
-    "|act_part_difference|float|Final Dataset|The state's ACT participation rate change from 2017 to 2018.|\n",
-    "|average_part17|float|Final Dataset|The state's average participation rate across both tests in 2017.|\n",
-    "|average_part18|float|Final Dataset|The state's average participation rate across both tests in 2018.|\n",
-    "|sat_totalchange|int|Final Dataset|The state's SAT mean total score change from 2017 to 2018.|\n",
-    "|act_totalchange|float|Final Dataset|The state's ACT mean total score change from 2017 to 2018.|"
+    "|act17_composite|float|ACT 2017|The state's mean composite score for the 2017 ACT.|"
    ]
   },
   {
@@ -11328,6 +11315,43 @@
     "The majority of states did not see a significant change in mean total/composite scores, with most data points falling within (-100, 50) for SAT scores and (-2, 1) for ACT scores. The exceptions are Illinois and Colorado, which saw their mean totals for the ACT increase significantly with the fall in ACT participation rates. We see a corresponding decrease in SAT mean total scores as well.\n",
     "\n",
     "Additionally, two states saw significant changes in SAT mean scores without a clear change in ACT scores. Florida's mean SAT total score increased with a drop in participation rate, while Utah's mean score fell significantly with only a 1% increase in participation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Updated Data Dictionary\n",
+    "\n",
+    "|Feature|Type|Dataset|Description|\n",
+    "|---|---|---|---|\n",
+    "|state|object|ACT & SAT|The U.S. state for which the data applies.|\n",
+    "|sat17_participation|float|SAT 2017|The state's participation rate for the 2017 SAT.|\n",
+    "|sat17_readingwriting|int|SAT 2017|The state's mean score for the Evidence-Based Reading & Writing component of the 2017 SAT.|\n",
+    "|sat17_math|int|SAT 2017|The state's mean score for the Math component of the 2017 SAT.|\n",
+    "|sat17_total|int|SAT 2017|The state's mean total score for the 2017 SAT.|\n",
+    "|act17_participation|float|ACT 2017|The state's participation rate for the 2017 ACT.|\n",
+    "|act17_english|float|ACT 2017|The state's mean score for the English component of the 2017 ACT.|\n",
+    "|act17_math|float|ACT 2017|The state's mean score for the Math component of the 2017 ACT.|\n",
+    "|act17_reading|float|ACT 2017|The state's mean score for the Reading component of the 2017 ACT.|\n",
+    "|act17_science|float|ACT 2017|The state's mean score for the Science component of the 2017 ACT.|\n",
+    "|act17_composite|float|ACT 2017|The state's mean composite score for the 2017 ACT.|\n",
+    "|sat18_participation|float|SAT 2018|The state's participation rate for the 2018 SAT.|\n",
+    "|sat18_readingwriting|int|SAT 2018|The state's mean score for the Evidence-Based Reading & Writing component of the 2018 SAT.|\n",
+    "|sat18_math|int|SAT 2018|The state's mean score for the Math component of the 2018 SAT.|\n",
+    "|sat18_total|int|SAT 2018|The state's mean total score for the 2018 SAT.|\n",
+    "|act18_participation|float|ACT 2018|The state's participation rate for the 2018 ACT.|\n",
+    "|act18_english|float|ACT 2018|The state's mean score for the English component of the 2018 ACT.|\n",
+    "|act18_math|float|ACT 2018|The state's mean score for the Math component of the 2018 ACT.|\n",
+    "|act18_reading|float|ACT 2018|The state's mean score for the Reading component of the 2018 ACT.|\n",
+    "|act18_science|float|ACT 2018|The state's mean score for the Science component of the 2018 ACT.|\n",
+    "|act18_composite|float|ACT 2018|The state's mean composite score for the 2018 ACT.|\n",
+    "|sat_part_difference|float|Final Dataset|The state's SAT participation rate change from 2017 to 2018.|\n",
+    "|act_part_difference|float|Final Dataset|The state's ACT participation rate change from 2017 to 2018.|\n",
+    "|average_part17|float|Final Dataset|The state's average participation rate across both tests in 2017.|\n",
+    "|average_part18|float|Final Dataset|The state's average participation rate across both tests in 2018.|\n",
+    "|sat_totalchange|int|Final Dataset|The state's SAT mean total score change from 2017 to 2018.|\n",
+    "|act_totalchange|float|Final Dataset|The state's ACT mean total score change from 2017 to 2018.|"
    ]
   },
   {
