--- a/dsi-16_project-1/code/Alexis Lim_DSI-16_Project 1_Submission.ipynb
+++ b/dsi-16_project-1/code/Alexis Lim_DSI-16_Project 1_Submission.ipynb
@@ -11896,9 +11896,10 @@
     "\n",
     "*Additional Data*\n",
     "\n",
-    "Additional data that would have been useful for this analysis would be data from preceding and subsequent years such that we could examine the trends in the data over time.\n",
-    "\n",
-    "More granular data at the county or school-level would also have allowed us more data points to examine the trends in test scores and participation rates."
+    "Additional data that would have been useful for this analysis are the following:\n",
+    "- Categorical variable on state policies toward standardized testing (e.g. Mandates testing: Yes/No; which state-administered test if any)\n",
+    "- Data from preceding and subsequent years such that we could examine a trend in the data over time.\n",
+    "- More granular data at the county or school-level that would have allowed us more data points to examine the trends in test scores and participation rates.\n"
    ]
   }
  ],
